--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,6 +1,7 @@
 [deps]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 ITensorFormatter = "b6bf39f1-c9d3-4bad-aad8-593d802f65fd"
+JuliaSyntax = "70703baa-626e-46a2-a12c-08ffd08c73b4"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -11,6 +12,7 @@ ITensorFormatter = {path = ".."}
 [compat]
 Aqua = "0.8"
 ITensorFormatter = "0.1"
+JuliaSyntax = "0.4.10"
 SafeTestsets = "0.1"
 Suppressor = "0.2"
 Test = "1.10"
