--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,9 @@ JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 JuliaSyntax = "70703baa-626e-46a2-a12c-08ffd08c73b4"
 Runic = "62bfec6d-59d7-401d-8490-b29ee721c001"
 
+[apps]
+itfmt = {}
+
 [compat]
 JuliaFormatter = "2.3.0"
 JuliaSyntax = "0.4.10"
