--- a/.github/workflows/TagBot.yml
+++ b/.github/workflows/TagBot.yml
@@ -15,5 +15,5 @@ jobs:
       - uses: JuliaRegistries/TagBot@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          registry: https://github.com/ITensor/ITensorRegistry.git
+          registry: ITensor/ITensorRegistry
           ssh: ${{ secrets.DOCUMENTER_KEY }}
